[MA-26] Corrigir code smells